#162 : Fix JaCoCo coverage reporting for Gradle build