@@ -150,24 +150,6 @@ subprojects {
         source = 'src/test/java'
     }
 
-    // See: https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17
-    test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.io=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.nio.file=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.math=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.time=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.security=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/java.net=ALL-UNNAMED"
-    test.jvmArgs "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
-    test.jvmArgs "--add-exports", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
-
     jacoco {
         toolVersion = "0.8.9" // https://docs.gradle.org/current/userguide/jacoco_plugin.html
     }
